# Cmakefile

./: CMakeLists.txt  makefile_standard
include/: accessmodifier.h  constructor.h  copyconstructor.h  dataalignment.h  destructor.h  friendclass.h  shape.h  static.h  template.h  typedef.h  virtualdestructor.h  virtualkeyword.h
src/: accessmodifier.cpp  constructor.cpp  copyconstructor.cpp  dataalginment.cpp  destructor.cpp  friendclass.cpp  main.c  main.cpp  shape.cpp  static.cpp  template.cpp  typedef.c  virtualdestructor.cpp  virtualkeyword.cpp
